--- a/my-money-app/frontend/public/index.html
+++ b/my-money-app/frontend/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>  
-        <meta charset='utf-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <title>My Money</title> 
-        <link rel='stylesheet' href='app.css'>
-    </head>
-    <body class='skin-blue fixed sidebar-mini'> 
-        <div id="app" class="wrapper"></div>
-        <script src='app.js'></script>
-    </body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="theme-color" content="#000000">
+		<title>My Money</title>
+	</head>
+	<body class='skin-blue fixed sidebar-mini'> 
+		<noscript>
+			You need to enable JavaScript to run this app.
+		</noscript>
+		<div id="app" class="wrapper"></div>
+	</body>
 </html>
